test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_square_bracket_alt_1.draco
proc main() void : a := a(:1:); corp;

