test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_range_expr_non_type_arg.draco
proc main() void : a := range(a+1); corp;

